# dci-core-himpl

./: CMakeLists.txt
cmakeModules/: dciHimpl.cmake
include/dci/: himpl.hpp
include/dci/himpl/: face2Impl.hpp  faceLayout.hpp  fakeConstructionArg.hpp  impl2Face.hpp  implDestructorCaller.hpp  implMetaInfo.hpp
include/dci/himpl/check/: faceConstraints.hpp  isFirstPolymorphic.hpp  runtimeExecutors.hpp  runtimeInstance.hpp
include/dci/himpl/details/: implDestructionExecutor.hpp  implOffsetEvaluator.hpp  metaInfoFetcher.hpp  polymorphicFaceLayout.hpp  simpleFaceLayout.hpp  space.hpp
include/dci/himpl/generator/: implMetaInfoWriter.hpp  nameMapper.hpp
